# mosaic

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
Formula/: mosaic.rb
config/: default.toml
examples/: mosaic.toml
sa/: Makefile  mosaic.defs  mosaic_payload.dylib  payload.c
scripts/: install-sa.sh  install-service.sh  io.mosaic.plist
src/: accessibility.rs  config.rs  features.rs  hotkeys.rs  ipc.rs  layout.rs  main.rs  msg.rs  sa.rs  skylight.rs  window.rs
tests/: e2e_tests.rs
